The stars (score) are shifted in IE7 bug:2481
git-svn-id: http://piwigo.org/svn/branches/2.3@12509 68402e56-0260-453c-a942-63ccdbb3a9ee

--- a/themes/default/fix-ie7.css
+++ b/themes/default/fix-ie7.css
@@ -22,3 +22,7 @@
 .pwg-icon {
 	display: block;
 }
+
+INPUT[type='submit'] {
+  text-indent: 0px !important;
+}
